--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "e47f99e7-2e92-41b7-9f57-2822ae5f10aa"
 authors = ["Fredrik Pettersson <fredrik.pettersson@moffitt.org>"]
 version = "0.1.0"
 
+[deps]
+Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
+
 [compat]
 julia = "^1"
 
