--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,13 @@ uuid = "0c88c325-9891-4b47-8316-abdfe8381675"
 authors = ["Fredrik Pettersson <fredrik.pettersson@moffitt.org>"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
+
 [compat]
 julia = "^1"
+Pipe = "^1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
